[build-system]
requires = ["setuptools>=61.2.0", "wheel", "toml", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "JAbs"
authors = [{name = "KOLANICH"}]
description = "Abstraction layer around ways to call JVM libs from python"
readme = "ReadMe.md"
keywords = ["java", "JVM", "GraalVM", "GraalPython", "Scala"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://codeberg.org/KAbs/JAbs.py"}
requires-python = ">=3.4"
dependencies = ['JPype1;implementation_name=="cpython"']
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
